<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>custom_draw</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="wagih.omar11@gmai.com">omark</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>math</depend>
  <depend>time</depend>
  <depend>turtlesim.srv</depend>
  <depend>turtlesim.msg</depend>

  
  <exec_depend>turtle_commander</exec_depend>
  <exec_depend>shape_node</exec_depend>
  
 

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
